force-app/main/default/objects/HotelCustomer__c/HotelCustomer__c.object-meta.xml
<CustomObject>
    <label>HotelCustomer</label>
    <nameField>
        <displayFormat>HC-{0000}</displayFormat>
        <label>HotelCustomer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HotelCustomers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>