force-app/main/default/objects/HotelCustomer__c/fields/AddressLine__c.field-meta.xml
<CustomField>
    <fullName>AddressLine__c</fullName>
    <label>AddressLine</label>
    <type>TextArea</type>
</CustomField>