force-app/main/default/objects/HotelCustomer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Jodhpur</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Udaipur</fullName>
            </value>
            <value>
                <fullName>Bikaner</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Kota</fullName>
            </value>
            <value>
                <fullName>Sikar</fullName>
            </value>
            <value>
                <fullName>Tonk</fullName>
            </value>
            <value>
                <fullName>Nagaur</fullName>
            </value>
            <value>
                <fullName>Gurugram (Gurgaon)</fullName>
            </value>
            <value>
                <fullName>Faridabad</fullName>
            </value>
            <value>
                <fullName>Ambala</fullName>
            </value>
            <value>
                <fullName>Hisar</fullName>
            </value>
            <value>
                <fullName>Sonipat</fullName>
            </value>
            <value>
                <fullName>Panchkula</fullName>
            </value>
            <value>
                <fullName>Rohtak</fullName>
            </value>
            <value>
                <fullName>Karnal</fullName>
            </value>
            <value>
                <fullName>Bhiwani</fullName>
            </value>
            <value>
                <fullName>Fatehabad</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Gwalior</fullName>
            </value>
            <value>
                <fullName>Jabalpur</fullName>
            </value>
            <value>
                <fullName>Ujjain</fullName>
            </value>
            <value>
                <fullName>Sagar</fullName>
            </value>
            <value>
                <fullName>Rewa</fullName>
            </value>
            <value>
                <fullName>Dewas</fullName>
            </value>
            <value>
                <fullName>Katni</fullName>
            </value>
            <value>
                <fullName>Mandsaur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>