force-app/main/default/objects/HotelCustomer__c/fields/EmailId__c.field-meta.xml
<CustomField>
    <fullName>EmailId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>EmailId</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>