force-app/main/default/objects/HotelCustomer__c/fields/Passport_Visa_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Visa_Number__c</fullName>
    <label>Passport / Visa Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>