force-app/main/default/objects/HotelCustomer__c/fields/TotalPaid__c.field-meta.xml
<CustomField>
    <fullName>TotalPaid__c</fullName>
    <label>TotalPaid</label>
    <summarizedField>Hotel_Bill__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Hotel_Bill__c.Name</field>
        <operation>equals</operation>
        <value>HotelCustomer Name</value>
    </summaryFilterItems>
    <summaryForeignKey>Hotel_Bill__c.HotelCustomer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>