force-app/main/default/objects/HotelCustomer__c/fields/TotalPayable__c.field-meta.xml
<CustomField>
    <fullName>TotalPayable__c</fullName>
    <label>TotalPayable</label>
    <summarizedField>HotelBooking__c.Total_Hours__c</summarizedField>
    <summaryForeignKey>HotelBooking__c.HotelCustomer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>