force-app/main/default/objects/HotelCustomer__c/validationRules/First_Name_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_rules</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( First_Name__c )   &lt; 3</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>Name should be greater than 2 characters</errorMessage>
</ValidationRule>