force-app/main/default/objects/HotelCustomer__c/validationRules/Gender_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Gender__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Gender__c</errorDisplayField>
    <errorMessage>Gender is required.</errorMessage>
</ValidationRule>