force-app/main/default/objects/HotelCustomer__c/validationRules/Last_Name_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_rules</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(  Last_Name__c  ) == 0</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Last Name is required.</errorMessage>
</ValidationRule>