force-app/main/default/objects/HotelCustomer__c/validationRules/Nationality_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Nationality_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Nationality__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Nationality__c</errorDisplayField>
    <errorMessage>Nationality is required</errorMessage>
</ValidationRule>