force-app/main/default/objects/HotelCustomer__c/validationRules/Passport_Visa_Number_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Visa_Number_rules</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(Nationality__c , &quot;NRI&quot;) ,ISPICKVAL(Nationality__c , &quot;FORIEGNER&quot;))   &amp;&amp; 
 ISBLANK( Passport_Visa_Number__c )</errorConditionFormula>
    <errorDisplayField>Passport_Visa_Number__c</errorDisplayField>
    <errorMessage>You are not indian so your passport or visa number is required</errorMessage>
</ValidationRule>