force-app/main/default/objects/HotelCustomer__c/validationRules/Spouse_Name_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Spouse_Name_rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsMarried__c = TRUE,  ISBLANK( Spouse_Name__c ))</errorConditionFormula>
    <errorDisplayField>Spouse_Name__c</errorDisplayField>
    <errorMessage>If You are married then provide your spouse name</errorMessage>
</ValidationRule>