force-app/main/default/objects/HotelCustomer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>IsMarried__c</columns>
    <columns>Spouse_Name__c</columns>
    <columns>EmailId__c</columns>
    <columns>Nationality__c</columns>
    <columns>Passport_Visa_Number__c</columns>
    <columns>TotalPayable__c</columns>
    <columns>TotalPaid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>